--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Joseph Acevedo</title>
+    <title>The Revere Rewind: A Coding Project By Joseph Acevedo</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"> <img src="img/logo-white-small.svg" class="d-line-block align-text-top" width="30" height="24">
-                App Name</a>
+                The Reverse Rewind</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/josephacevedo" target="_blank">Git Repo</a>
+                        <a class="nav-link" href="https://github.com/josephacevedo/The-Reverse-Rewind" target="_blank">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://josephacevedo.netlify.app" target="_blank">About</a>
@@ -56,40 +56,33 @@
                 <!-- left col -->
                 <div class="col-6">
                     <!-- title -->
-                    <h1 class="display-5 fw-bold lh-1 mb-3">App name: </h1>
+                    <h1 class="display-5 fw-bold lh-1 mb-3">The Reverse Rewind: </h1>
                     <!-- description -->
                     <h4 class="lead text-dark">
-                        a description that describes the app
+                       A Javascript application that takes a word and revers's it
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li>
-                            <span class="fa-li"><i class="fas fa-check-square"></i></span>
+                            <span class="fa-li checkmark"><i class="fas fa-check-square"></i></span>
                             CSS and Bootstrap Layout
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check-square"></i></span>
+                            <span class="fa-li checkmark"><i class="fas fa-check-square"></i></span>
                             Javascript Fundamentals
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check-square"></i></span>
+                            <span class="fa-li checkmark"><i class="fas fa-check-square"></i></span>
                             Javascript Loops
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check-square"></i></span>
+                            <span class="fa-li checkmark"><i class="fas fa-check-square"></i></span>
                             Javascript Functions
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check-square"></i></span>
+                            <span class="fa-li checkmark"><i class="fas fa-check-square"></i></span>
                             Javascript Dom Manipulation
                         </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check-square"></i></span>
-                            Javascript IF/Then/Else
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check-square"></i></span>
-                            Javascript Boolean Logic
-                        </li>
+                        
                     </ul>
                 </div>
 
@@ -97,7 +90,7 @@
                 <div class="col order-first order-lg-0">
                     <!-- logo -->
 
-                    <img src="https://cdn.pixabay.com/photo/2019/01/23/21/16/pixabay-3951079_1280.png" alt=""
+                    <img src="img/reveseRewind.svg" alt=""
                         class="img-fluid center-block d-block mx-auto" width="700" height="500">
                 </div>
 
